# sentiment-analysis

./: .gitattributes  README.md  check_toml.py  main.py  pyproject.toml  requirements.txt  test_imports.py
docs/: pefor_run.md
src/data/: clean_null.py
src/data/processed/: sentiment_synthetic_final.csv
src/data/raw/: sentiment_synthetic.csv
src/models/: esp32.py  micropython_foresp32.py  train_model.py
src/models/model_last2/: label_encoder.pkl  tokenizer.json
src/models/model_last2/checkpoint-2500/: config.json  model.safetensors  optimizer.pt  rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
src/models/model_last2/checkpoint-2708/: model.safetensors  optimizer.pt  rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
tmp_splits/: test.csv  train.csv
