[project]
name = "new-folder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "absl-py==2.3.0",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.13",
    "aiosignal==1.3.2",
    "altair==5.5.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asttokens==3.0.0",
    "astunparse==1.6.3",
    "attrs==25.3.0",
    "blinker==1.9.0",
    "cachetools==6.1.0",
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "colorama==0.4.6",
    "comm==0.2.2",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "dill==0.3.8",
    "executing==2.2.0",
    "fastapi==0.115.13",
    "ffmpy==0.6.0",
    "filelock==3.18.0",
    "flask==3.1.1",
    "flatbuffers==25.2.10",
    "fonttools==4.58.4",
    "frozenlist==1.7.0",
    "fsspec==2025.3.0",
    "gast==0.6.0",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "google-pasta==0.2.0",
    "groovy==0.1.2",
    "grpcio==1.73.1",
    "h11==0.16.0",
    "h5py==3.14.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "ipython-pygments-lexers==1.1.1",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.1",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "jupyter-core==5.8.1",
    "keras==3.10.0",
    "kiwisolver==1.4.8",
    "libclang==18.1.1",
    "markdown==3.8.2",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.3",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "ml-dtypes==0.4.1",
    "mpmath==1.3.0",
    "multidict==6.5.1",
    "multiprocess==0.70.16",
    "namex==0.1.0",
    "narwhals==1.44.0",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "numpy==1.26.4",
    "opencv-python==4.10.0.84",
    "opt-einsum==3.4.0",
    "optree==0.16.0",
    "orjson==3.10.18",
    "packaging==25.0",
    "pandas==2.3.0",
    "parso==0.8.4",
    "pillow==11.2.1",
    "platformdirs==4.3.8",
    "prompt-toolkit==3.0.51",
    "propcache==0.3.2",
    "protobuf==4.25.8",
    "psutil==7.0.0",
    "pure-eval==0.2.3",
    "pyarrow==20.0.0",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydeck==0.9.1",
    "pydub==0.25.1",
    "pygments==2.19.2",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pywin32==310",
    "pyyaml==6.0.2",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.4",
    "rich==14.0.0",
    "rpds-py==0.25.1",
    "ruff==0.12.0",
    "safehttpx==0.1.6",
    "safetensors==0.5.3",
    "scikit-learn==1.7.0",
    "scipy==1.16.0",
    "semantic-version==2.10.0",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "stack-data==0.6.3",
    "starlette==0.46.2",
    "streamlit==1.46.0",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "tensorboard==2.17.1",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.17.0",
    "tensorflow-intel==2.17.0",
    "termcolor==3.1.0",
    "threadpoolctl==3.6.0",
    "toml==0.10.2",
    "tomlkit==0.13.3",
    "tornado==6.5.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typer==0.16.0",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uvicorn==0.34.3",
    "watchdog==6.0.0",
    "wcwidth==0.2.13",
    "websockets==15.0.1",
    "werkzeug==3.1.3",
    "wheel==0.45.1",
    "wrapt==1.17.2",
    "xxhash==3.5.0",
    "yarl==1.20.1",
]
